# PyDA_domain_adaptation

./: LICENSE  README.md  pyproject.toml  requirements.txt
TL_models/: __init__.py  dist_measures.py  standard_checks.py
TL_models/deep/: CDAN.py  DAN.py  DANN.py  JAN.py  __init__.py  base_model.py  utils.py
TL_models/kernel/: BDA.py  GFK.py  JDA.py  TCA.py  __init__.py
TL_models/stat/: CORAL.py  NCA.py  __init__.py
benchmarks/: MNIST__MNISTM_example.ipynb
tests/: test_cdan.py  test_dan.py  test_dann.py
